# whenact

./: .gitignore  README.md  README_CN.md  setup.cfg  tox.ini
src/whenact/: __init__.py  behavior.py  context.py  decision.py  decisionflow.py  history.py  pipeline.py  register.py  task.py  types.py
src/whenact/block/: __init__.py  act_block.py  act_decorator.py  when_block.py
tests/: context_test.py  decisionflow_test.py  hist_test.py  pipeline_test.py  register_test.py  test_register.py  whenact_test.py
