[metadata]
name = whenact
version = 0.0.7
author = MorvanZhou
author_email = morvanzhou@hotmail.com
description = whenact decision pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/whenact
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/whenact/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dataclasses >= 0.8; python_version < "3.7"

[options.packages.find]
where = src

[options.extras_require]
build =
    tox==3.24.3
    tox-conda
    build
    twine
    pylint
